--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<>
+
 <!--Menü-->
 <header>
     <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
@@ -53,7 +53,7 @@
     <h5 class="fs-4 text-center">Arabalar</h5>
     <div class="row ">
         
-        <section class="col">
+        <section class="col-12 col-md-4">
             <div class="card">
                 <img src="img/Toyota.jpg" class="img-fluid card-img-top"  alt="toyota">
             <div class="card-body">
@@ -63,7 +63,7 @@
             </div>
             </div>
         </section>
-          <section class="col">
+          <section class="col-12 col-md-4">
             <div class="card">
                 <img src="img/Toyota.jpg" class="img-fluid card-img-top"  alt="toyota">
             <div class="card-body">
@@ -73,7 +73,7 @@
             </div>
             </div>
         </section>
-          <section class="col">
+          <section class="col-12 col-md-4">
             <div class="card">
                 <img src="img/Toyota.jpg" class="img-fluid card-img-top"  alt="toyota">
             <div class="card-body">
