--- a/arabalar.html
+++ b/arabalar.html
@@ -119,7 +119,7 @@
             </div>
         </div>
       </div>
-      <div class="col-12 col-md-4>
+      <div class="col-12 col-md-4">
         <div class="card ">
             <img src="https://placehold.co/600x400" class="card-img-top" alt="">
             <div class="card-body">
